# console-client

./: .gitmodules  AGENTS.md  CLAUDE.MD  COMMIT.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/agents/: ci-packaging-engineer.md  repo-docs-maintainer.md  rust-ffi-cli.md
.claude/commands/: bump-version.md  pre-commit.md  release-prep.md  verify-install.md
.githooks/: pre-commit
.github/: Dockerfile
.github/workflows/: ci.yml  docker.yml
pCloudCC/lib/pclsync/: pfs.c
pkg/arch/: PKGBUILD
scripts/: upload-symbols.sh
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  auth_prompt.rs  commands.rs  mod.rs
src/crash_reporting/: config.rs  mod.rs  native.rs  panic_hook.rs
src/daemon/: ipc.rs  mod.rs  process.rs  signals.rs
src/ffi/: callbacks.rs  mod.rs  raw.rs  types.rs
src/security/: env.rs  mod.rs  password.rs
src/tui/: CLAUDE.md  app.rs  event_types.rs  mod.rs  state.rs  theme.rs  ui.rs
src/tui/widgets/: about_screen.rs  activity_log.rs  auth_screen.rs  crypto_panel.rs  header.rs  help_bar.rs  help_screen.rs  mod.rs  mount_panel.rs  password_input.rs  tab_bar.rs  transfer.rs  unlink_confirm.rs
src/utils/: browser.rs  cstring.rs  deps.rs  mod.rs  mount.rs  qrcode.rs  terminal.rs
src/wrapper/: auth.rs  client.rs  crypto.rs  filesystem.rs  mod.rs  weblogin.rs
tests/: integration.rs
tests/integration/: cli_tests.rs  daemon_tests.rs  ipc_tests.rs  mod.rs  signal_tests.rs
